# booklydemo

./: .env.example  .gitignore  Bookly_CS_Agent_Demo_Script.docx  Bookly_CS_Agent_Pitch.pptx  Bookly_Interview_Deck.pptx  DEMO_SCRIPT.md  DEPLOY.md  INTERVIEW_TALK_TRACK.md  LICENSE  PITCH_DECK.md  PRESENTATION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
agent/: chat_helpers.py  demo_helpers.py  memory.py  orchestrator.py  prompts.py  summary.py
app/: __init__.py  decagon_style.py  main.py  streamlit_app.py
app/static/: chat.js  index.html  style.css
data/: __init__.py  book_subjects.json  catalog.json  loader.py  mock_orders.json  policies.json
evals/: golden_set.json  run_evals.py
notebooks/: bookly_agent.ipynb  bookly_demo.ipynb  colab_bootstrap.py  setup_path.py
scripts/: build_deck.py  build_docs.py  build_interview_deck.py  cli.py  cli_demo.py
tools/: bookly_tools.py  registry.py
